<resources>
    <string name="app_name">lib</string>

    <string name="http_server_fail" translatable="false">网络错误，请稍后再试</string>
    <string name="http_connect_fail" translatable="false">网络错误，请稍后再试</string>
    <string name="http_no_connect" translatable="false">网络错误，请稍后再试</string>
    <string name="http_server_die" translatable="false">网络错误，请稍后再试</string>

    <string name="preference_device_id">pre_device_id</string>

    <string name="cancel">取消</string>
    <string name="clear">清除</string>
    <string name="delete">删除</string>
    <string name="confirm">确定</string>
    <string name="txt_continue">继续</string>
    <string name="dialog_tips">提示</string>
    <string name="dialog_not_show">不再提示</string>

    <string name="record_time_choose_title">请选择时间</string>

    <string name="text_retry">重试</string>
    <string name="text_net_work_error">网络错误</string>

    <string name="update_news_size">成功为您更新了%1$d条信息</string>
    <string name="textView_click_load_more">点击加载更多</string>
</resources>
